# backendChurnguard

./: .env  README.md  example.env  main.py  pyproject.toml  requirements.txt  sample_email_notifications.csv  setup.py
application/dtos/: auth_dtos.py  client_dtos.py  customer_incident_prediction_dtos.py  customer_issue_dtos.py  email_notification_dtos.py  note_dtos.py  report_dtos.py
application/services/: auth_service.py  client_service.py  customer_incident_prediction_service.py  customer_issue_service.py  email_notification_service.py  note_service.py  report_service.py
backend.egg-info/: PKG-INFO  SOURCES.txt
domain/entities/: client.py  customer_incident_prediction.py  customer_issue.py  email_notification.py  factor.py  interaction.py  note.py  recommendation.py  user.py
domain/repositories/: client_repository_interface.py  customer_incident_prediction_repository_interface.py  customer_issue_repository_interface.py  email_notification_repository_interface.py  factor_repository_interface.py  interaction_repository_interface.py  note_repository_interface.py  recommendation_repository_interface.py  user_repository_interface.py
domain/services/: auth_service.py
domain/value_objects/: auth_token.py
infrastructure/repositories/: client_repository.py  customer_incident_prediction_repository.py  customer_issue_repository.py  email_notification_repository.py  factor_repository.py  interaction_repository.py  note_repository.py  recommendation_repository.py  user_repository.py
infrastructure/services/: db_schema_initializer.py  email_service.py  jwt_service.py  (+4 more)
(+7 files in other folders)
